--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -46,7 +46,7 @@
                                                     <svg aria-hidden="true"
                                                         class="slds-input__icon slds-icon-text-default">
                                                         <use
-                                                            xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search">
+                                                            xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#search">
                                                         </use>
                                                     </svg>
                                                     <input id="lookup" onkeyup="filter()" class="slds-input" type="text"
@@ -56,7 +56,7 @@
                                                         class="slds-icon_container slds-icon-utility-search slds-input__icon slds-input__icon_right">
                                                         <svg class="slds-icon slds-icon slds-icon_x-small slds-icon-text-default"
                                                             aria-hidden="true">
-                                                            <use xlink:href="/images/symbols.svg#search">
+                                                            <use xlink:href="/mcapp/images/symbols.svg#search">
                                                             </use>
                                                         </svg>
                                                     </span>
