--- a/public/mcapp/Create.html
+++ b/public/mcapp/Create.html
@@ -16,7 +16,6 @@
     <link href="/mcapp/css/create-style.css" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
     <style>
-        
         ::-webkit-input-placeholder {
             /* Chrome/Opera/Safari */
             font-size: 13px;
@@ -139,12 +138,22 @@
             margin-right: 1% !important;
         }
 
-        .c3 svg, .datepicker-days, .dc-chart .tick text, .navbar-search .search-query, .panel-default .panel-heading, body, button, input, select, textarea {
-    background-color: #fff;
-    font-family: museo_sans300!important;
-    font-weight: 400;
-    font-style: normal;
-    color: #707070;
+        .c3 svg,
+        .datepicker-days,
+        .dc-chart .tick text,
+        .navbar-search .search-query,
+        .panel-default .panel-heading,
+        body,
+        button,
+        input,
+        select,
+        textarea {
+            background-color: #fff;
+            font-family: museo_sans300 !important;
+            font-weight: 400;
+            font-style: normal;
+            color: #707070;
+        }
     </style>
 
 </head>
@@ -170,7 +179,7 @@
                 aria-describedby="help" aria-disabled="true" title="Info" style="margin-bottom: 5px;">
                 <svg class="slds-button__icon" aria-hidden="true" style="width: 12px; height:12px;">
                     <use
-                        xlink:href="/vendor/bower_components/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info">
+                        xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info">
                     </use>
                 </svg>
             </button>
@@ -193,7 +202,7 @@
                 aria-describedby="help" aria-disabled="true" title="Info" style="margin-bottom: 5px;">
                 <svg class="slds-button__icon" aria-hidden="true" style="width: 12px; height:12px;">
                     <use
-                        xlink:href="/vendor/bower_components/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info">
+                        xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info">
                     </use>
                 </svg>
             </button>
@@ -254,7 +263,7 @@
     <input type="hidden" id="eid" name="eid" value="">
     <input type="hidden" id="rl" name="rl" value="">
 
-    </div>    
+    </div>
     <script type="text/javascript" src="/mcapp/js/create.js"></script>
 </body>
 
