--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -81,7 +81,7 @@
                                         closertotopclass="project-canvas-element--closer-to-top" id="username-panel">
                                         <div class="slds-form-element slds-m-bottom_x-small ">
                                             <label class="slds-form-element__label">
-                                                <span>EID</span>
+                                                <span>Salesforce EID</span>
                                             </label>
                                             <div class="slds-form-element__control">
                                                 <input class="slds-input" type="text" id="eid" readonly> <a href="#" id="copyEid"
