removed wrong font-family

--- a/public/mcapp/home/index.html
+++ b/public/mcapp/home/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="../js/login.js"></script>
 </head>
 
-<body style="background-color: #fff; font-family:Lobster" >
+<body style="background-color: #fff;" >
     <div class="visual-area-positions--left-half " closertotopclass="project-canvas-element--closer-to-top" id="login"
         style="display:block;">
         <div class="slds-grid slds-grid_align-center ">
