--- a/public/mcapp/Edit.html
+++ b/public/mcapp/Edit.html
@@ -19,28 +19,28 @@
         ::-webkit-input-placeholder {
             /* Chrome/Opera/Safari */
             font-size: 13px;
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
         }
 
         ::-moz-placeholder {
             /* Firefox 19+ */
 
             font-size: 13px;
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
         }
 
         :-ms-input-placeholder {
             /* IE 10+ */
 
             font-size: 13px;
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
         }
 
         :-moz-placeholder {
             /* Firefox 18- */
 
             font-size: 13px;
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
         }
 
         #rules {
@@ -75,19 +75,19 @@
             line-height: 1.14;
             color: #3f4a56;
             padding: 0 10px;
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
         }
 
         .Select-value-label,
         #btn-addLink,
         #cancel,
         .af-button-text {
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
             font-size: 13px;
         }
 
         .slds-form-element__label {
-            font-family: Gotham A, Gotham B;
+            font-family: museo_sans300;
             font-size: 15px;
         }
 
