font styles update

--- a/public/mcapp/Edit.html
+++ b/public/mcapp/Edit.html
@@ -107,6 +107,23 @@
         .slds-box{
             background-color:pink;
         }
+
+        .c3 svg,
+        .datepicker-days,
+        .dc-chart .tick text,
+        .navbar-search .search-query,
+        .panel-default .panel-heading,
+        body,
+        button,
+        input,
+        select,
+        textarea {
+            background-color: #fff;
+            font-family: museo_sans300 !important;
+            font-weight: 400;
+            font-style: normal;
+            color: #707070;
+        }
     </style>
 
 </head>
