--- a/public/mcapp/home/index.html
+++ b/public/mcapp/home/index.html
@@ -11,21 +11,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
-        href="../css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css"  type="text/css">
-        
+        href="../vendor/bower_components/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
 
-    <script type="text/javascript" src="../js/jquery.min.js"></script>
-    
+    <script type="text/javascript" src="../vendor/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="../js/login.js"></script>
 </head>
 
-<body style="background-color: #fff;" >
+<body style="background-color: #fff;">
     <div class="visual-area-positions--left-half " closertotopclass="project-canvas-element--closer-to-top" id="login"
         style="display:block;">
         <div class="slds-grid slds-grid_align-center ">
 
             <div class="slds-clearfix visual-area-positions--closer-to-top visual-area-positions--left-half slds-size_medium"
-                dropzone="grid column 1">
+                dropzone="grid column 1"  style="width: 400px;">
                 <div class="visual-area-positions--left-half" closertotopclass="project-canvas-element--closer-to-top">
                     <div class="slds-form slds-clearfix slds-form_stacked slds-align_absolute-center visual-area-positions--closer-to-top visual-area-positions--left-half"
                         dropzone="formLayout">
@@ -54,7 +52,7 @@
                             <div class="visual-area-positions--left-half"
                                 closertotopclass="project-canvas-element--closer-to-top">
                                 <div class="slds-form slds-clearfix slds-form_stacked visual-area-positions--left-half"
-                                    dropzone="formLayout">
+                                    dropzone="formLayout" style="width: auto;">
                                     <div class="visual-area-positions--left-half"
                                         closertotopclass="project-canvas-element--closer-to-top"
                                         id="username-panel">
