--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -11,10 +11,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
-        href="../vendor/bower_components/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
+    href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">>
 
-    <script type="text/javascript" src="./vendor/bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="./js/validatetoken.js"></script>
+    <script type="text/javascript" src="./mcapp/js/jquery.min.js"></script>
+    <script type="text/javascript" src="./mcapp/js/validatetoken.js"></script>
     <style>
         .slds-input {
             width: 80% !important;
