--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -34,7 +34,7 @@
                         dropzone="formLayout">
                         <div class="visual-area-positions--left-half"
                             closertotopclass="project-canvas-element--closer-to-top">
-                            <img src="../images/Logo.PNG" style="width: auto; height: auto;"></div>
+                            <img src="../mcapp/images/Logo.PNG" style="width: auto; height: auto;"></div>
                     </div>
                 </div>
                 <div class="visual-area-positions--left-half" closertotopclass="project-canvas-element--closer-to-top">
