--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
-    href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">>
+    href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
 
     <script type="text/javascript" src="./mcapp/js/jquery.min.js"></script>
     <script type="text/javascript" src="./mcapp/js/validatetoken.js"></script>
@@ -82,7 +82,7 @@
                                             <span>Salesforce EID</span>
                                             <button class="slds-button slds-button_icon slds-button slds-button_icon" id="help" aria-describedby="help" aria-disabled="true" title="Info">
                                                 <svg class="slds-button__icon" aria-hidden="true">
-                                                    <use xlink:href="../css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
+                                                    <use xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                                                 </svg>
                                             </button>
                                             <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-help" style="top: 240px;position: absolute;left: 554px;display:none">
