--- a/public/mcapp/home/index.html
+++ b/public/mcapp/home/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
-    href="../css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css"  type="text/css">>
+    href="../css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css"  type="text/css">
 
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/login.js"></script>
