fix issue in dashboard and removed title in tooltip

--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -80,7 +80,7 @@
                                     <div class="visual-area-positions--left-half" closertotopclass="project-canvas-element--closer-to-top" id="username-panel">
                                         <label class="slds-form-element__label">
                                             <span>Salesforce EID</span>
-                                            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="help" aria-describedby="help" aria-disabled="true" title="Info">
+                                            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="help" aria-describedby="help" aria-disabled="true">
                                                 <svg class="slds-button__icon" aria-hidden="true">
                                                     <use xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                                                 </svg>
