updated text in configurationToken html

--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -62,9 +62,10 @@
 
                                     <div class="visual-area-positions--left-half"
                                     closertotopclass="project-canvas-element--closer-to-top" style="padding-top: 16px; padding-bottom: 16px;">
-                                        <span>Insert the Token and EID below into the AppsFlyer platform Integrated partners section and than click the below validate button
-                                            Click here for further </span>
-                                    <a href="https://support.appsflyer.com/hc/en-us/articles/360004964178">instructions </a>
+                                        <span>AppsFlyer requires the below Token and Salesforce Enterprise ID (EID) information to be added to the AppsFlyer platform to gain access to the AppsFlyer OneLink App for Salesforce.  
+                                            <br>When you have completed adding the Token and Salesforce Enterprise ID (EID) to AppsFlyer platform, proceed by clicking the ‘Validate’ button below.
+                                        <br> For additional information of how to activate the AppsFlyer OneLink App for Salesforce please follow these                                     <a href="https://support.appsflyer.com/hc/en-us/articles/360004964178">instructions</a>.
+                                    </span>
                                 </div>
                                     <div class="visual-area-positions--left-half"
                                         closertotopclass="project-canvas-element--closer-to-top" id="password-panel">
