--- a/public/mcapp/Edit.html
+++ b/public/mcapp/Edit.html
@@ -146,7 +146,7 @@
         <label class="slds-form-element__label" for="text-input-id-1">
             <abbr class="slds-required" title="required">* </abbr>
             Link Name
-            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="linkname-help"
+            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="linkname-help-edit"
             aria-describedby="help" aria-disabled="true" style="margin-bottom: 5px;">
             <svg class="slds-button__icon" aria-hidden="true" style="width: 12px; height:12px;">
                 <use
@@ -154,8 +154,8 @@
                 </use>
             </svg>
         </button>
-        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-linkname"
-            style="top: -110%;left: -4.5%;max-width: none;display: none;">
+        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-linkname-edit"
+            style="max-width: none;position:absolute;top:-4px;left:212px; display:none">
             <div class="slds-popover__body" style="font-size: 1.10rem;">Give your link a name so you can recognize
                 it easily on content generation.</div>
         </div>
@@ -170,7 +170,7 @@
             <abbr class="slds-required" title="required">* </abbr>
             Base URL 
             <b id="urlType"style="color:green;"></b>
-            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="baseurl-help"
+            <button class="slds-button slds-button_icon slds-button slds-button_icon" id="baseurl-help-edit"
                 aria-describedby="help" aria-disabled="true" title="Info" style="margin-bottom: 5px;">
                 <svg class="slds-button__icon" aria-hidden="true" style="width: 12px; height:12px;">
                     <use
@@ -178,8 +178,8 @@
                     </use>
                 </svg>
             </button>
-            <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-baseurl"
-                style="top: -110%;left: -4.5%;max-width: none;display: none;">
+            <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-baseurl-edit"
+                style="max-width: none;position:absolute;top:-4px;left:212px;display:none">
                 <div class="slds-popover__body" style="font-size: 1.10rem;"> Paste here the attribution link you copied
                     from the AppsFlyer link management section.</div>
             </div>
