--- a/public/mcapp/configureToken.html
+++ b/public/mcapp/configureToken.html
@@ -12,9 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
     <link rel="stylesheet"
     href="/mcapp/css/salesforce-lightning-design-system/assets/styles/salesforce-lightning-design-system.min.css">
-
-    <script type="text/javascript" src="./mcapp/js/jquery.min.js"></script>
-    <script type="text/javascript" src="./mcapp/js/validatetoken.js"></script>
+    <link rel="stylesheet"
+    href="/mcapp/css/styles.css">
+    <script type="text/javascript" src="/mcapp/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/mcapp/js/validatetoken.js"></script>
     <style>
         .slds-input {
             width: 80% !important;
@@ -86,7 +87,7 @@
                                                     <use xlink:href="/mcapp/css/salesforce-lightning-design-system/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                                                 </svg>
                                             </button>
-                                            <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-help" style="top: 240px;position: absolute;left: 42%;display:none">
+                                            <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="tooltip-help" style="max-width: none;position:absolute;top: 417px;left: 962px; display:none">
                                                 <div class="slds-popover__body">The Enterprise ID (EID) is used to make sure all apps under your Salesforce account can access the AppsFlyer app.</div>
                                             </div>
                                         </label>
