updated Input to textarea

--- a/public/mcapp/Edit.html
+++ b/public/mcapp/Edit.html
@@ -207,12 +207,12 @@
     </div>
     <div class="slds-form-element" style="padding-bottom: 2%;">
         <label class="slds-form-element__label" style=" padding-top: 2%;  ">Custom  Parameters</label>    <div class="slds-form-element__control">
-            <input type="text" name="customParameters" id="customParameters" class="form-control" value="">
+            <textarea name="customParameters" id="customParameters" class="slds-textarea" value=""></textarea>
         </div>
     </div>
     <div class="slds-form-element" style="padding-bottom: 2%;">
         <label class="slds-form-element__label" style=" padding-top: 2%;  ">Full URL</label>    <div class="slds-form-element__control">
-            <input type="text" name="fullurl" id="fullurl" class="form-control" value="" disabled>
+            <textarea name="fullurl" id="fullurl" class="slds-textarea" value="" disabled></textarea>
         </div>
     </div>
     <div class="slds-grid slds-gutters">
