--- a/public/image/index.html
+++ b/public/image/index.html
@@ -28,7 +28,7 @@
       <header class="slds-media slds-media_center slds-has-flexi-truncate">
         <div class="slds-media__figure">
           <span class="slds-icon_container" title="description of icon when needed">
-            <img src="icon.png" alt="AppsFlyer Logo" width="40px">
+            <img src="/login/icon.png" width="40px">
           </span>
         </div>
         <div class="slds-media__body">
