--- a/public/button/index.html
+++ b/public/button/index.html
@@ -15,14 +15,14 @@
     <div class="slds-card__header slds-grid">
       <header class="slds-media slds-media_center slds-has-flexi-truncate">
         <div class="slds-media__figure">
-          <span class="slds-icon_container" title="description of icon when needed">
-            <img src="/login/icon.png"  width="40px">
+          <span class="slds-icon_container">
+            <img src="./login/icon.png"  width="40px">
           </span>
         </div>
         <div class="slds-media__body">
           <h2>
             <a href="javascript:void(0);" class="slds-card__header-link slds-truncate" title="[object Object]">
-              <span class="slds-text-heading_small">AppsFlyer - Button Content Block</span>
+              <span class="slds-text-heading_small">AppsFlyer OneLink Button</span>
             </a>
           </h2>
         </div>
