update styles for inputs on Button CCB

--- a/public/button/index.html
+++ b/public/button/index.html
@@ -73,7 +73,7 @@
                   &nbsp;&nbsp;
                 </button>
                 <div class="slds-color-picker__summary-input">
-                  <input type="text" id="color-picker-summary-input" class="slds-input" value="#5D5D5D" />
+                  <input type="text" id="color-picker-summary-input" class="slds-input" value="#5D5D5D" style="display:inline-block" />
                 </div>
 
               </div>
