update input style

--- a/public/button/index.html
+++ b/public/button/index.html
@@ -72,8 +72,8 @@
                   title="Choose Color">
                   &nbsp;&nbsp;
                 </button>
-                <div class="slds-color-picker__summary-input">
-                  <input type="text" id="color-picker-summary-input" class="slds-input" value="#5D5D5D" style="display:inline-block" />
+                <div class="slds-color-picker__summary-input" style="display:inline-block" >
+                  <input type="text" id="color-picker-summary-input" class="slds-input" value="#5D5D5D"/>
                 </div>
 
               </div>
@@ -96,7 +96,7 @@
                 title="Choose Color">
                 &nbsp;&nbsp;
               </button>
-              <div class="slds-color-picker__summary-input">
+              <div class="slds-color-picker__summary-input" style="display:inline-block" >
                 <input type="text" id="FontColor" class="slds-input" value="#FFFFFF" />
               </div>
 
