--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -88,9 +88,7 @@
     </div>
     <input type="hidden" id="rt" name="rt" value="">
     <input type="hidden" id="eid" name="eid" value="">
-
-
-
+    <input type="hidden" id="dashboard-data" name="dashboard-data" value="">
     <script>
 
         function filter() {
