--- a/public/mcapp/DashboardHome.html
+++ b/public/mcapp/DashboardHome.html
@@ -80,7 +80,7 @@
                 <div class="slds-card__body">
                     <div class="slds-col slds-size_3-of-3">
                         <div id="dashboard-table"></div>
-                        <ul id="pagination-demo" class="pagination-sm"></ul>
+                        <ul id="pagination-demo" class="pagination-sm" style="justify-content: center;"></ul>
                     </div>
                 </div>
             </article>
