--- a/public/mcapp/Create.html
+++ b/public/mcapp/Create.html
@@ -258,6 +258,7 @@
                 style="padding: 7px 12px; font-size:15px;display:inline-block;">Generate link</button>
         </div>
     </div>
+    <input type="hidden" id="JSONParameters" name="JSONParameters" value="">
     <input type="hidden" id="rt" name="rt" value="">
     <input type="hidden" id="eid" name="eid" value="">
     <input type="hidden" id="rl" name="rl" value="">
